--- a/pom.xml
+++ b/pom.xml
@@ -14,7 +14,7 @@
 	<name>SocialNetwork</name>
 	<description>Group diploma by Skillbox Java-PRO course</description>
 	<properties>
-		<java.version>11</java.version>
+		<java.version>16</java.version>
 	</properties>
 	<dependencies>
 
@@ -62,6 +62,10 @@
 			<groupId>org.springframework.security</groupId>
 			<artifactId>spring-security-test</artifactId>
 			<scope>test</scope>
+		</dependency>
+		<dependency>
+			<groupId>org.projectlombok</groupId>
+			<artifactId>lombok</artifactId>
 		</dependency>
 	</dependencies>
 
