added db migrations: create tables and foreign keys

--- a/src/main/resources/application-dev.yml
+++ b/src/main/resources/application-dev.yml
@@ -6,12 +6,12 @@ spring:
   jpa:
     show-sql: true
     hibernate:
-      ddl-auto: create-drop
+      ddl-auto: create
   mail:
     host:
     port:
     username:
     password:
   flyway:
-    enabled: false
+    enabled: true
 
