--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,20 +1,13 @@
-server:
-  port: 8080
-
 spring:
-  messages:
-    basename: lang.messages
-  profiles:
-    active: dev
   datasource:
-    driver-class-name: org.postgresql.Driver
-    url:
-    username:
-    password:
+    url: jdbc:postgresql://localhost:5432/SocialNetwork
+    username: postgres
+    password: rootroot
   jpa:
-    show-sql: false
+    show-sql: true
+    generate-ddl: false
     hibernate:
-      ddl-auto: none
+      ddl-auto: validate
   mail:
     host:
     port:
@@ -22,3 +15,4 @@ spring:
     password:
   flyway:
     enabled: true
+
