--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -11,9 +11,9 @@ spring:
     username: postgres
     password: rootroot
   jpa:
-    show-sql: false
+    show-sql: true
     hibernate:
-      ddl-auto: none
+      ddl-auto: validate
   mail:
     host:
     port:
