--- a/pom.xml
+++ b/pom.xml
@@ -23,12 +23,13 @@
 		<postgresql.version>42.3.1</postgresql.version>
 
 		<!-- Logging -->
-		<logback.version>1.2.6</logback.version>
+		<logback.version>1.2.8</logback.version>
 		<slf4j.version>1.7.32</slf4j.version>
 
 		<!--Дополнительные сервисы-->
 		<commons-lang3.version>3.12.0</commons-lang3.version>
-		<swagger.version>2.1.11</swagger.version>
+		<springdoc.version>1.5.12</springdoc.version>
+		<springfox.version>3.0.0</springfox.version>
 	</properties>
 	<dependencies>
 
@@ -111,10 +112,16 @@
             <version>${commons-lang3.version}</version>
         </dependency>
 		<dependency>
-			<groupId>io.swagger.core.v3</groupId>
-			<artifactId>swagger-annotations</artifactId>
-			<version>${swagger.version}</version>
+			<groupId>org.springdoc</groupId>
+			<artifactId>springdoc-openapi-ui</artifactId>
+			<version>${springdoc.version}</version>
 		</dependency>
+		<dependency>
+			<groupId>io.springfox</groupId>
+			<artifactId>springfox-swagger2</artifactId>
+			<version>${springfox.version}</version>
+		</dependency>
+
 	</dependencies>
 
     <build>
