--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -24,5 +24,9 @@ spring:
 registration:
   verification:
     url: localhost:8080/api/v1/account/register/complete
+recovery:
+  pass:
+    verification:
+      url: localhost:8080/api/v1/account//password/recovery/complete
 jwt:
   secret: secret
