--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -18,9 +18,9 @@ spring:
       ddl-auto: validate
 mailjet:
   mail:
-    key: 42ab394187a24011ecdcb095ff7fe4b6
-    from: jpa021network@mail.ru
-    secret: e70ed72dd4cfecf672bac3e516762acb!
+    key: b5736394130d305b19e80ea67901b8d3
+    from: zerone.soc.net@gmail.com
+    secret: 8e03e14c440fd2c075a1607cd107c0f9
     version: v3.1
   flyway:
     enabled: true
