--- a/src/test/resources/application-test.yml
+++ b/src/test/resources/application-test.yml
@@ -2,7 +2,7 @@ server:
   port: 8080
 spring:
   datasource:
-    url: jdbc:h2:~/testdb;DB_CLOSE_ON_EXIT=FALSE
+    url: jdbc:h2:~/testdb;MODE=MySQL
     username: sa
     password:
     driverClassName: org.h2.Driver
@@ -10,14 +10,14 @@ spring:
     show-sql: false
     hibernate:
       dialect: org.h2.Driver
-      ddl-auto: update
+      ddl-auto: create-drop
   flyway:
     enabled: false
 mailjet:
   mail:
-    key: 42ab394187a24011ecdcb095ff7fe4b6
-    from: jpa021network@mail.ru
-    secret: e70ed72dd4cfecf672bac3e516762acb!
+    key: b5736394130d305b19e80ea67901b8d3
+    from: zerone.soc.net@gmail.com
+    secret: 8e03e14c440fd2c075a1607cd107c0f9
     version: v3.1
 registration:
   verification:
