--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -7,11 +7,9 @@ spring:
   profiles:
     active: dev
   datasource:
-    url: jdbc:mysql://${MYSQL_HOST:localhost}:3306/SocialNetwork?createDatabaseIfNotExist=true
-      &allowPublicKeyRetrieval=true&useSSL=false&useUnicode=true
-      &characterEncoding=UTF-8&serverTimezone=UTC
-    username: bestuser
-    password: bestuser
+    url: jdbc:postgresql://localhost:5432/SocialNetwork
+    username: postgres
+    password: root
   jpa:
     show-sql: true
     hibernate:
