--- a/src/test/resources/application-test.yml
+++ b/src/test/resources/application-test.yml
@@ -2,7 +2,7 @@ server:
   port: 8080
 spring:
   datasource:
-    url: jdbc:h2:~/testdb;MODE=MySQL
+    url: jdbc:h2:~/testdb;MODE=PostgeSQL
     username: sa
     password:
     driverClassName: org.h2.Driver
