--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -7,27 +7,27 @@ spring:
   profiles:
     active: dev
   datasource:
-    url: jdbc:postgresql://localhost:5432/SocialNetwork?stringtype=unspecified
-    username: postgres
-    password: root
+    url: ${JDBC_DATABASE_URL}
+    username: ${JDBC_DATABASE_USERNAME}
+    password: ${JDBC_DATABASE_PASSWORD}
   jpa:
     show-sql: true
     hibernate:
-      ddl-auto: none
+      ddl-auto: validate
 mailjet:
   mail:
-    key: b5736394130d305b19e80ea67901b8d3
-    from: zerone.soc.net@gmail.com
-    secret: 8e03e14c440fd2c075a1607cd107c0f9
+    key: ${MAIlJET_MAIL_KEY}
+    from: ${MAIlJET_MAIL_FROM}
+    secret: ${MAIlJET_MAIL_SECRET}
     version: v3.1
   flyway:
     enabled: true
 registration:
   verification:
-    url: localhost:8080/api/v1/account/register/complete
+    url: ${REG_VERIFICATION_URL}
 recovery:
   pass:
     verification:
-      url: localhost:8080/api/v1/account/password/recovery/complete
+      url: ${PEC_PASS_VERIFICATION_URL}
 jwt:
-  secret: secret
+  secret: ${JWT_SECRET}
