--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,6 +1,6 @@
 server:
   port: 8080
-  base_url: http://localhost:8080
+  base_url: ${BASE_URL}
 spring:
   messages:
     basename: lang.messages
