--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -7,27 +7,27 @@ spring:
   profiles:
     active: dev
   datasource:
-    url: ${JDBC_DATABASE_URL}
-    username: ${JDBC_DATABASE_USERNAME}
-    password: ${JDBC_DATABASE_PASSWORD}
+    url: jdbc:postgresql://localhost:5432/SocialNetwork?stringtype=unspecified
+    username: postgres
+    password: 1234
   jpa:
     show-sql: true
     hibernate:
-      ddl-auto: validate
+      ddl-auto: none
 mailjet:
   mail:
-    key: ${MAIlJET_MAIL_KEY}
-    from: ${MAIlJET_MAIL_FROM}
-    secret: ${MAIlJET_MAIL_SECRET}
+    key: b5736394130d305b19e80ea67901b8d3
+    from: zerone.soc.net@gmail.com
+    secret: 8e03e14c440fd2c075a1607cd107c0f9
     version: v3.1
   flyway:
     enabled: true
 registration:
   verification:
-    url: ${REG_VERIFICATION_URL}
+    url: localhost:8080/api/v1/account/register/complete
 recovery:
   pass:
     verification:
-      url: ${PEC_PASS_VERIFICATION_URL}
+      url: localhost:8080/api/v1/account/password/recovery/complete
 jwt:
-  secret: ${JWT_SECRET}
+  secret: secret
