--- a/src/test/resources/application-test.properties
+++ b/src/test/resources/application-test.properties
@@ -1,16 +1,15 @@
 server.port= 8080
 server.base_url= http://localhost:8080
 
-spring.datasource.url= jdbc:h2:~/testdb;MODE=PostgreSQL;DB_CLOSE_DELAY=-1;DB_CLOSE_ON_EXIT=FALSE
-spring.datasource.username= sa
-spring.datasource.password=
-spring.datasource.driverClassName= org.h2.Driver
+spring.datasource.url= jdbc:postgresql://localhost:5432/SocialNetworkTest?stringtype=unspecified
+spring.datasource.username= postgres
+spring.datasource.password= root
 
-spring.jpa.show-sql= false
-spring.jpa.hibernate.dialect=org.hibernate.dialect.H2Dialect
-spring.jpa.hibernate.ddl-auto= create-drop
+spring.jpa.show-sql= true
+spring.jpa.hibernate.dialect= org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.hibernate.ddl-auto= none
 
-spring.flyway.enabled= false
+spring.flyway.enabled= true
 
 mailjet.mail.from= jpro021network.zerone@mail.ru
 mailjet.mail.key= 044badceaa9c50ffadca8bd6977ad2e2
