--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,15 +1,15 @@
 server:
   port: 8080
-  base_url: ${BASE_URL}
+  base_url: http://localhost:8080
 spring:
   messages:
     basename: lang.messages
   profiles:
     active: dev
   datasource:
-    url: ${JDBC_DATABASE_URL}
-    username: ${JDBC_DATABASE_USERNAME}
-    password: ${JDBC_DATABASE_PASSWORD}
+    url: jdbc:postgresql://localhost:5432/SocialNetwork?stringtype=unspecified
+    username: postgres
+    password: root
   jpa:
     show-sql: false
     hibernate:
@@ -17,20 +17,20 @@ spring:
       dialect: org.hibernate.dialect.PostgreSQLDialect
 mailjet:
   mail:
-    key: ${MAIlJET_MAIL_KEY}
-    from: ${MAIlJET_MAIL_FROM}
-    secret: ${MAIlJET_MAIL_SECRET}
+    key: 044badceaa9c50ffadca8bd6977ad2e2
+    from: jpro021network.zerone@mail.ru
+    secret: 9fee7f15536b6b26cc08dd0edef4785a
     version: v3.1
   flyway:
     enabled: true
 jwt:
-  secret: ${JWT_SECRET}
+  secret: secret
 captcha:
   width: 193
   height: 57
   image: data:captchaImage/png;base64,
   lifespanBySec: 0
 cloudinary:
-  cloudName: ${CLOUDINARY_CLOUD_NAME}
-  apiKey: ${CLOUDINARY_API_KEY}
-  apiSecret: ${CLOUDINARY_API_SECRET}
+  cloudName: dcn3kveee
+  apiKey: 695884337247625
+  apiSecret: U4D89gdUoSYLhK1eBCPCTOo1TvE
