--- a/src/test/resources/application-test.properties
+++ b/src/test/resources/application-test.properties
@@ -1,9 +1,9 @@
 server.port= 8080
-server.base_url= ${BASE_URL}
+server.base_url= http://localhost:8080
 
-spring.datasource.url= ${JDBC_DATABASE_TEST_URL}
-spring.datasource.username= ${JDBC_DATABASE_USERNAME}
-spring.datasource.password= ${JDBC_DATABASE_PASSWORD}
+spring.datasource.url= jdbc:postgresql://localhost:5432/SocialNetworkTest?stringtype=unspecified
+spring.datasource.username= postgres
+spring.datasource.password= root
 
 spring.jpa.show-sql= true
 spring.jpa.hibernate.dialect= org.hibernate.dialect.PostgreSQLDialect
@@ -11,10 +11,10 @@ spring.jpa.hibernate.ddl-auto= none
 
 spring.flyway.enabled= true
 
-mailjet.mail.from= ${MAIlJET_MAIL_FROM}
-mailjet.mail.key= ${MAIlJET_MAIL_KEY}
-mailjet.mail.secret= ${MAIlJET_MAIL_SECRET}
+mailjet.mail.from= jpro021network.zerone@mail.ru
+mailjet.mail.key= 044badceaa9c50ffadca8bd6977ad2e2
+mailjet.mail.secret= 9fee7f15536b6b26cc08dd0edef4785a
 
-jwt.secret= ${JWT_SECRET}
+jwt.secret= secret
 
 cors.urls= http://localhost/
