Added PostreSQLEnumType class and corresponding annotations to entities

--- a/src/test/resources/application-test.properties
+++ b/src/test/resources/application-test.properties
@@ -1,7 +1,7 @@
 server.port= 8080
 server.base_url= http://localhost:8080
 
-spring.datasource.url= jdbc:postgresql://localhost:5432/SocialNetworkTest?stringtype=unspecified
+spring.datasource.url= jdbc:postgresql://localhost:5432/SocialNetworkTest
 spring.datasource.username= postgres
 spring.datasource.password= root
 
