--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -7,7 +7,7 @@ spring:
   profiles:
     active: dev
   datasource:
-    url: jdbc:postgresql://localhost:5432/SocialNetwork?stringtype=unspecified
+    url: jdbc:postgresql://localhost:5432/SocialNetwork
     username: postgres
     password: root
   jpa:
