--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -9,7 +9,7 @@ spring:
   datasource:
     url: jdbc:postgresql://localhost:5432/SocialNetwork?stringtype=unspecified
     username: postgres
-    password: root
+    password: 1234
   jpa:
     show-sql: false
     hibernate:
