--- a/src/test/resources/application-test.properties
+++ b/src/test/resources/application-test.properties
@@ -11,9 +11,9 @@ spring.jpa.hibernate.ddl-auto= none
 
 spring.flyway.enabled= true
 
-mailjet.mail.from= jpro021network.zerone@mail.ru
-mailjet.mail.key= 044badceaa9c50ffadca8bd6977ad2e2
-mailjet.mail.secret= 9fee7f15536b6b26cc08dd0edef4785a
+mailjet.mail.from= admin@zeronenetwork.design
+mailjet.mail.key= 31630259aad78bb4a4adff1902eee4c3
+mailjet.mail.secret= cc6adb843048afd0f1a7d9c33feb4b22
 
 jwt.secret= secret
 
