--- a/src/test/resources/application-test.properties
+++ b/src/test/resources/application-test.properties
@@ -15,6 +15,8 @@ mailjet.mail.from= admin@zeronenetwork.design
 mailjet.mail.key= 31630259aad78bb4a4adff1902eee4c3
 mailjet.mail.secret= cc6adb843048afd0f1a7d9c33feb4b22
 
+mailjet.mail.email_admin= briz.zukkel@gmail.com
+
 jwt.secret= secret
 
 cors.urls= http://localhost/
