--- a/pom.xml
+++ b/pom.xml
@@ -22,7 +22,7 @@
 
 		<!--Дополнительные сервисы-->
 		<commons-lang3.version>3.12.0</commons-lang3.version>
-		<springdoc.version>1.5.12</springdoc.version>
+		<springdoc.version>1.6.3</springdoc.version>
 		<springfox.version>3.0.0</springfox.version>
 	</properties>
 
@@ -63,7 +63,6 @@
 			<groupId>org.thymeleaf.extras</groupId>
 			<artifactId>thymeleaf-extras-springsecurity5</artifactId>
 		</dependency>
-
 		<!--Почтовый сервис-->
 		<dependency>
 			<groupId>com.mailjet</groupId>
@@ -144,6 +143,12 @@
 			<groupId>org.imgscalr</groupId>
 			<artifactId>imgscalr-lib</artifactId>
 			<version>4.2</version>
+		</dependency>
+		<!-- https://mvnrepository.com/artifact/commons-io/commons-io -->
+		<dependency>
+			<groupId>commons-io</groupId>
+			<artifactId>commons-io</artifactId>
+			<version>2.11.0</version>
 		</dependency>
 		<!-- https://mvnrepository.com/artifact/com.cloudinary/cloudinary-http44 -->
 		<dependency>
