--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -35,3 +35,7 @@ cloudinary:
   cloudName: dcn3kveee
   apiKey: 695884337247625
   apiSecret: U4D89gdUoSYLhK1eBCPCTOo1TvE
+html:
+  file:
+    register: ./src/main/resources/messages/register.html
+    recovery: ./src/main/resources/messages/recovery.html
