--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -10,7 +10,7 @@ spring:
     pathmatch:
       matching-strategy: ant_path_matcher
   datasource:
-    url: ${JDBC_DATABASE_TEST_URL}
+    url: ${JDBC_DATABASE_URL}
     username: ${JDBC_DATABASE_USERNAME}
     password: ${JDBC_DATABASE_PASSWORD}
   jpa:
@@ -35,9 +35,9 @@ captcha:
   image: data:captchaImage/png;base64,
   lifespanBySec: 0
 cloudinary:
-  cloudName: dcn3kveee
-  apiKey: 695884337247625
-  apiSecret: U4D89gdUoSYLhK1eBCPCTOo1TvE
+  cloudName: ${CLOUDINARY_CLOUD_NAME}
+  apiKey: ${CLOUDINARY_API_KEY}
+  apiSecret: ${CLOUDINARY_API_SECRET}
 html:
   file:
     register: ./src/main/resources/messages/register.html
