--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -27,14 +27,14 @@ build:
     - develop
     - main
 
-unit testing:
-  stage: test
-  script:
-    - 'mvn $MAVEN_CLI_OPTS test'
-  image: maven:latest
-  only:
-    - develop
-    - main
+# unit testing:
+#   stage: test
+#   script:
+#     - 'mvn $MAVEN_CLI_OPTS test'
+#   image: maven:latest
+#   only:
+#     - develop
+#     - main
 
 deploy to develop:
   stage: develop
