JPRO-47 Like2Posts/Comments complete

--- a/src/test/resources/application-test.properties
+++ b/src/test/resources/application-test.properties
@@ -3,7 +3,7 @@ server.base_url= http://localhost:8080
 
 spring.datasource.url= jdbc:postgresql://localhost:5432/SocialNetworkTest
 spring.datasource.username= postgres
-spring.datasource.password= root
+spring.datasource.password= rootroot
 
 spring.jpa.show-sql= true
 spring.jpa.hibernate.dialect= org.hibernate.dialect.PostgreSQLDialect
