--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -24,7 +24,7 @@ mailjet:
     from: ${MAIlJET_MAIL_KEY}
     secret: ${MAIlJET_MAIL_SECRET}
     version: v3.1
-    email_admin: briz.zukkel@gmail.com
+    email_admin: ${MAIlJET_MAIL_ADMIN}
   flyway:
     enabled: true
 jwt:
