--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -27,13 +27,13 @@ build:
     - develop
     - main
 
-# unit testing:
-#   stage: test
-#   script:
-#     - 'mvn $MAVEN_CLI_OPTS test'
-#   image: maven:latest
-#   only:
-#     - develop
+unit testing:
+  stage: test
+  script:
+    - 'mvn $MAVEN_CLI_OPTS test'
+  image: maven:latest
+  only:
+    - develop
 
 deploy to develop:
   stage: develop
