Тестирование методов get и delete

--- a/src/test/resources/application-test.properties
+++ b/src/test/resources/application-test.properties
@@ -1,9 +1,9 @@
 server.port= 8080
 server.base_url= ${BASE_URL}
 
-spring.datasource.url= ${JDBC_DATABASE_URL_TEST}
-spring.datasource.username= ${JDBC_DATABASE_USERNAME_TEST}
-spring.datasource.password= ${JDBC_DATABASE_PASSWORD_TEST}
+spring.datasource.url= ${JDBC_DATABASE_TEST_URL}
+spring.datasource.username= ${JDBC_DATABASE_USERNAME}
+spring.datasource.password= ${JDBC_DATABASE_PASSWORD}
 
 spring.jpa.show-sql= true
 spring.jpa.hibernate.dialect= org.hibernate.dialect.PostgreSQLDialect
