Added fields for likes mapping

--- a/src/test/resources/application-test.properties
+++ b/src/test/resources/application-test.properties
@@ -14,7 +14,7 @@ spring.flyway.enabled= true
 mailjet.mail.from= ${MAIlJET_MAIL_FROM}
 mailjet.mail.key= ${MAIlJET_MAIL_KEY}
 mailjet.mail.secret= ${MAIlJET_MAIL_SECRET}
-mailjet.mail.email_admin= briz.zukkel@gmail.com
+mailjet.mail.email_admin= ${MAIlJET_MAIL_EMAIL_ADMIN}
 
 jwt.secret= ${JWT_SECRET}
 
