--- a/src/test/resources/application-test.properties
+++ b/src/test/resources/application-test.properties
@@ -1,7 +1,7 @@
 server.port= 8080
 server.base_url= ${BASE_URL}
 
-spring.datasource.url= jdbc:postgresql://localhost:5432/SocialNetworkTest?stringtype=unspecified
+spring.datasource.url= ${JDBC_DATABASE_URL_TEST}
 spring.datasource.username= ${JDBC_DATABASE_USERNAME_TEST}
 spring.datasource.password= ${JDBC_DATABASE_PASSWORD_TEST}
 
