--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -18,6 +18,12 @@ spring:
     hibernate:
       ddl-auto: none
       dialect: org.hibernate.dialect.PostgreSQLDialect
+
+
+  boot:
+    admin:
+      client:
+        url: http://localhost:8080
 mailjet:
   mail:
     from: ${MAIlJET_MAIL_FROM}
@@ -38,6 +44,16 @@ cloudinary:
   cloudName: ${CLOUDINARY_CLOUD_NAME}
   apiKey: ${CLOUDINARY_API_KEY}
   apiSecret: ${CLOUDINARY_API_SECRET}
+management:
+  endpoints:
+    web:
+      base-path: ${ACTUATOR}
+      exposure:
+        include: health,flyway
+  endpoint:
+    health:
+      show-details: when-authorized
+
 html:
   file:
     register: ./src/main/resources/messages/register.html
