Added endpoints to PlatformController to recieve countries and cities lists

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -53,3 +53,5 @@ html:
   file:
     register: ./src/main/resources/messages/register.html
     recovery: ./src/main/resources/messages/recovery.html
+
+location: src/main/resources/location/locations.xml
