--- a/src/test/resources/application-test.properties
+++ b/src/test/resources/application-test.properties
@@ -19,3 +19,5 @@ mailjet.mail.email_admin= ${MAIlJET_MAIL_EMAIL_ADMIN}
 jwt.secret= ${JWT_SECRET}
 
 cors.urls= ${BASE_URL}
+
+location: src/test/resources/location/locations.xml
