--- a/pom.xml
+++ b/pom.xml
@@ -175,6 +175,11 @@
 			<artifactId>spring-boot-admin-starter-client</artifactId>
 			<version>2.6.1</version>
 		</dependency>
+		<dependency>
+			<groupId>com.google.guava</groupId>
+			<artifactId>guava</artifactId>
+			<version>31.0.1-jre</version>
+		</dependency>
     </dependencies>
 
     <build>
