--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -2,6 +2,8 @@ server:
   port: ${PORT:8080}
   base_url: ${BASE_URL}
 spring:
+  application:
+    name: Zerone SocialNetwork
   messages:
     basename: lang.messages
   profiles:
@@ -18,6 +20,12 @@ spring:
     hibernate:
       ddl-auto: none
       dialect: org.hibernate.dialect.PostgreSQLDialect
+  boot:
+    admin:
+      client:
+        url: ${ADMIN_SERVER_URL}
+        username: ${ADMIN_NAME}
+        password: ${ADMIN_PASSWORD}
 
 mailjet:
   mail:
@@ -44,10 +52,10 @@ management:
     web:
       base-path: ${ACTUATOR}
       exposure:
-        include: health,flyway
+        include: "*"
   endpoint:
     health:
-      show-details: when-authorized
+      show-details: always
 
 html:
   file:
