--- a/pom.xml
+++ b/pom.xml
@@ -108,7 +108,21 @@
 			<version>${logback.version}</version>
 			<scope>runtime</scope>
 		</dependency>
-
+		<!--Мониторинг и администрирование-->
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-actuator</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>de.codecentric</groupId>
+			<artifactId>spring-boot-admin-starter-client</artifactId>
+			<version>2.6.1</version>
+		</dependency>
+		<dependency>
+			<groupId>io.micrometer</groupId>
+			<artifactId>micrometer-registry-prometheus</artifactId>
+			<version>1.8.2</version>
+		</dependency>
 		<!--Дополнительные сервисы-->
 		<dependency>
 			<groupId>org.projectlombok</groupId>
@@ -160,15 +174,6 @@
 			<groupId>com.cloudinary</groupId>
 			<artifactId>cloudinary-http44</artifactId>
 			<version>1.29.0</version>
-		</dependency>
-		<dependency>
-			<groupId>org.springframework.boot</groupId>
-			<artifactId>spring-boot-starter-actuator</artifactId>
-		</dependency>
-		<dependency>
-			<groupId>de.codecentric</groupId>
-			<artifactId>spring-boot-admin-starter-client</artifactId>
-			<version>2.6.1</version>
 		</dependency>
 		<dependency>
 			<groupId>com.google.guava</groupId>
